--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -50,10 +50,43 @@
 				</div>
 			</div>
 		</div>
-		<form th:action="@{/search}" th:object="${kierownice}"
-			method="post">
+		<form th:action="@{/search}" th:object="${kierownice}" method="post">
 			<button type="submit">KIEROWNICE</button>
 		</form>
+	</div>
+	<div class="container">
+		<<form method="post" th:object="${shopp}" class="mt-5">
+			<div class="form-group">
+				<label>Model</label>
+				<div
+					th:each="shopp : ${T(com.bmxApp.enums.Shop).values()}">
+					<div class="custom-control custom-radio custom-control-inline">
+						<input type="radio" th:field="*{shop}" th:value="${shopp}"
+							class="custom-control-input"> <label
+							class="custom-control-label" th:for="${#ids.prev('shop')}"
+							th:text="${shopp}">shopp</label>
+					</div>
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="custom-control custom-radio custom-control-inline">
+					<input type="radio" id="option1" name="option1"
+						class="custom-control-input" value="1" th:field="*{option}">
+					<label class="custom-control-label" for="option1">Option1</label>
+				</div>
+				<div class="custom-control custom-radio custom-control-inline">
+					<input type="radio" id="option2" name="option2"
+						class="custom-control-input" value="2" th:field="*{option}">
+					<label class="custom-control-label" for="option2">Option2</label>
+				</div>
+				<div class="custom-control custom-radio custom-control-inline">
+					<input type="radio" id="option3" name="option3"
+						class="custom-control-input" value="3" th:field="*{option}">
+					<label class="custom-control-label" for="option3">Option3</label>
+				</div>
+			</div>
+			<button class="btn btn-primary" type="submit">Submit form</button>
+		 </form> 
 	</div>
 </body>
 </html>
