--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -54,7 +54,55 @@
 			<button type="submit">KIEROWNICE</button>
 		</form>
 	</div>
-	<div class="container">
+	<form action="@{/prod}" th:object={${shop}} method="post">
+	<select name="color">
+		<option th:each="shops : ${T(com.bmxApp.enums.Shop).values()}"
+			th:value="${shops}" th:text="${shops}"></option>
+	</select>
+	</form>
+	<!--<div class="form-check">
+		<input type="radio" class="form-check-input" id="shop1Button"
+			name="optradio" value="option1" checked> ${T(com.bmxApp.enums.Shop)} <label
+			class="form-check-label" for="radio1"></label>
+	</div>
+	<div class="form-check">
+		<input type="radio" class="form-check-input" id="shop2Button"
+			name="optradio" value="option2">Option 2 <label
+			class="form-check-label" for="radio2"></label>
+	</div>
+	<div class="form-check">
+		<input type="radio" class="form-check-input" id="shop3Button"
+			name="optradio" value="option3">Option 2 <label
+			class="form-check-label" for="radio2"></label>
+	</div>
+		<div class="form-check">
+		<input type="radio" class="form-check-input" id="shop4Button"
+			name="optradio" value="option3">Option 2 <label
+			class="form-check-label" for="radio2"></label>
+	</div>
+	<div class="form-check">
+		<input th:each="shopp : ${T(com.bmxApp.enums.Shop).values()}"
+			th:value="${shopp}" th:text="${shopp}"></input>
+	</div>
+	<select name="shop">
+		<option th:each="shopp : ${T(com.bmxApp.enums.Shop).values()}"
+			th:value="${shopp}" th:text="${shopp}"></option>
+	</select>
+	<div class="form-check">
+		<input type="radio" class="form-check-input" id="radio1"
+			name="optradio" value="option1" checked>{${shops.BMXLIFE}} <label
+			class="form-check-label" for="radio1"></label>
+	</div>
+	<div class="form-check">
+		<input type="radio" class="form-check-input" id="radio2"
+			name="optradio" value="option2">Option 2 <label
+			class="form-check-label" for="radio2"></label>
+	</div>
+	<div class="form-check">
+		<input type="radio" class="form-check-input" disabled>Option 3
+		<label class="form-check-label"></label>
+	</div>
+	 <div class="container">
 		<<form method="post" th:object="${shopp}" class="mt-5">
 			<div class="form-group">
 				<label>Model</label>
@@ -68,7 +116,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="form-group">
+			 <div class="form-group">
 				<div class="custom-control custom-radio custom-control-inline">
 					<input type="radio" id="option1" name="option1"
 						class="custom-control-input" value="1" th:field="*{option}">
@@ -85,8 +133,8 @@
 					<label class="custom-control-label" for="option3">Option3</label>
 				</div>
 			</div>
-			<button class="btn btn-primary" type="submit">Submit form</button>
-		 </form> 
+			<button class="btn btn-primary" type="submit">Submit form</button>-->
+	</form>
 	</div>
 </body>
 </html>
