--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -35,17 +35,25 @@
 </head>
 <body>
 	<div class="container">
-		
+
 		<form th:action="@{/search}" th:object="${kierownice}" method="post">
 			<button type="submit">KIEROWNICE</button>
 		</form>
 	</div>
 	<!--<form th:action="@{/prod}" th:object="${test}" method="post">-->
-	<form th:action="@{/main1}" th:object="${test}" method="POST">
-		<select name="shopList">
-			<option th:each="shop : ${shopList}"
-				th:value="${shop}" th:text="${shop}"></option>
-		</select> <input type="submit" value="Save" />
+	<form th:object="${shopModel}" th:action="@{/search}" method="post">
+		<div class="form-group">
+			<label>Shop</label>
+			<div th:each="model : ${T(com.bmxApp.enums.Shop).values()}">
+				<div class="custom-control custom-radio custom-control-inline">
+					<input type="radio" th:field="*{shop}" th:value="${model}"
+						class="custom-control-input"> <label
+						class="custom-control-label" th:for="${#ids.prev('shop')}"
+						th:text="${model}">model</label>
+				</div>
+			</div>
+		</div>
+		<button class="btn btn-primary" type="submit" th:name="part" th:value="kierownice"/>
 	</form>
 	<!--<div class="form-check">
 		<input type="radio" class="form-check-input" id="shop1Button"
