--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -53,7 +53,7 @@
 				</div>
 			</div>
 		</div>
-		<button class="btn btn-primary" type="submit" th:name="part" th:value="kierownice"/>
+		<button class="btn btn-primary" type="submit" name="partName" value="ramy">AAA</button>
 	</form>
 	<!--<div class="form-check">
 		<input type="radio" class="form-check-input" id="shop1Button"
