--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -41,7 +41,7 @@
 		</form>
 	</div>
 	<!--<form th:action="@{/prod}" th:object="${test}" method="post">-->
-	<form th:object="${shopModel}" th:action="@{/search(id=${partName})}" method="post">
+	<form th:object="${shopModel}" th:action="@{/search}" method="post">
 		<div class="form-group">
 			<label>Shop</label>
 			<div th:each="model : ${T(com.bmxApp.enums.Shop).values()}">
@@ -53,7 +53,7 @@
 				</div>
 			</div>
 		</div>
-		<button class="btn btn-primary" type="submit" name="partName" value="ramy">AAA</button>
+		<button class="btn btn-primary" type="submit" name="partName" value="pegi">AAA</button>
 	</form>
 	<!--<div class="form-check">
 		<input type="radio" class="form-check-input" id="shop1Button"
