--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -31,30 +31,53 @@
 	left: 26%;
 	top: 51%;
 }
+
+button {
+	width: 80px;
+	height: 90px;
+	padding: 0;
+	border: none;
+}
 </style>
 </head>
 <body>
-	<div class="container">
+	<!--  <div class="container">
 
 		<form th:action="@{/search}" th:object="${kierownice}" method="post">
 			<button type="submit">KIEROWNICE</button>
 		</form>
+	</div>-->
+	<div id="counter">
+		<img id="background" src="images/plFlag.png" class="img-responsive" />
 	</div>
-	<!--<form th:action="@{/prod}" th:object="${test}" method="post">-->
-	<form th:object="${shopModel}" th:action="@{/search}" method="post">
-		<div class="form-group">
-			<label>Shop</label>
-			<div th:each="model : ${T(com.bmxApp.enums.Shop).values()}">
-				<div class="custom-control custom-radio custom-control-inline">
-					<input type="radio" th:field="*{shop}" th:value="${model}"
-						class="custom-control-input"> <label
-						class="custom-control-label" th:for="${#ids.prev('shop')}"
-						th:text="${model}">model</label>
+	<!--<div class="container">
+		<button type="button" class="btn btn-default">
+		<img src="../static/images/plFlag.png" th:src="@{images/plFlag.png}" />
+		 </button>
+		
+	</div> 
+	<span class="kakao"> <a href=""> <img
+			th:src="/images/bmxIcon2.png">
+	</a>
+	</span>-->
+	<div class="container">
+		<!--<form th:action="@{/prod}" th:object="${test}" method="post">-->
+		<form th:object="${shopModel}" th:action="@{/search}" method="post">
+			<div class="form-group">
+				<label>Shop</label>
+				<div th:each="model : ${T(com.bmxApp.enums.Shop).values()}">
+					<div class="custom-control custom-radio custom-control-inline">
+						<input type="radio" th:field="*{shop}" th:value="${model}"
+							class="custom-control-input"> <label
+							class="custom-control-label" th:for="${#ids.prev('shop')}"
+							th:text="${model}">model</label>
+					</div>
 				</div>
 			</div>
-		</div>
-		<button class="btn btn-primary" type="submit" name="partName" value="pegi">AAA</button>
-	</form>
+			<button class="btn btn-primary" type="submit" name="partName"
+				value="pegi">AAA</button>
+		</form>
+	</div>
 	<!--<div class="form-check">
 		<input type="radio" class="form-check-input" id="shop1Button"
 			name="optradio" value="option1" checked> ${T(com.bmxApp.enums.Shop)} <label
