Implemented BasketProduct model and repository, starting with shopping cart

--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -21,14 +21,14 @@
 				<td class="w-25"><img th:src="${product.imageUrl}"
 					alt="${product.imageUrl}" class="img-responsive" /></td>
 				<!-- <td th:text="${product.imageUrl}"/> -->
-				<td>
-					<button type="button" th:text="#{addBasket}" /> <!--<button class="btn btn-primary" type="submit" name="partName"
+				<td><a th:href="@{/cart}">
+						<button type="button" th:text="#{addBasket}" />
+				</a> <!--<button class="btn btn-primary" type="submit" name="partName"
 						th:text="#{addBasket}" value="pegi"
 						onclick="window.location.href='http://localhost:8080/?localeData=en'" />
 					<a th:href="@{/search(category=${model.shopName})}">
 						
-				</a>-->
-				</td>
+				</a>--></td>
 			</tr>
 		</tbody>
 	</table>
