--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -14,23 +14,25 @@
 		<div class="row">
 			<div class="col">
 				<th:block th:each="basketProduct : ${basketProducts}">
-					<div class="row border rounded corner"
-						th:with="product = ${basketProduct.getProduct}">
+					<div th:with="product = ${basketProduct.product}">
+						<div class="col">Remove icon</div>
 						<div class="col">
-							<div>Remove icon</div>
+							<a> <b>[[${product.productName}]]</b>
+							</a>
 						</div>
-						<div class="col">
-							<div>
-								<a> <b>[[${product.productName]]</b>
-								</a>
-							</div>
+						<div>
+							<input type="number" th:value="${basketProduct.quantity}" class="form-control"/>
 						</div>
+						<div class="col">Cena jednostkowa: [[${product.price}]]</div>
+						<div class="col">Cena laczna: [[${totalPrice}]]</div>
 						<div class="col">
-							<img th:src="@{${product.getUrl}}" class="img-fluid">
+							<img th:src="@{${product.imageUrl}}" class="img-fluid">
 						</div>
 					</div>
 				</th:block>
 			</div>
+			<div class="col"></div>
+
 		</div>
 	</div>
 </body>
