--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="https://www.thymeleaf.com">
 <head>
 <meta charset="UTF-8">
 <title>Shopping Cart</title>
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+	crossorigin="anonymous">
 </head>
 <body>
 
@@ -15,24 +20,38 @@
 			<div class="col">
 				<th:block th:each="basketProduct : ${basketProducts}">
 					<div th:with="product = ${basketProduct.product}">
-						<div class="col">Remove icon</div>
 						<div class="col">
-							<a> <b>[[${product.productName}]]</b>
+							<a class="fas fa-trash icon-dark" th:href="@{/}"></a>
+						</div>
+						<div class="col">
+							<a th:href="@{${product.url}}" th:title="${product.productName}"
+								target="_blank"> <b>[[${product.productName}]]</b>
 							</a>
 						</div>
-						<div>
-							<input type="number" th:value="${basketProduct.quantity}" class="form-control"/>
-						</div>
+						<div
+							th:replace="quantityController :: quantityController(${basketProduct.quantity}, ${basketProduct.product})">
+							Quantity</div>
 						<div class="col">Cena jednostkowa: [[${product.price}]]</div>
-						<div class="col">Cena laczna: [[${totalPrice}]]</div>
+						<div class="col">Cena laczna: [[${totalPriceByProduct}]]</div>
 						<div class="col">
 							<img th:src="@{${product.imageUrl}}" class="img-fluid">
 						</div>
 					</div>
 				</th:block>
 			</div>
-			<div class="col"></div>
+			<div class="col-sm-4" th:unless="${#lists.isEmpty(basketProducts)}">
+				<div>
+					<span class="h3">Cena łączna</span>
+				</div>
+				<div>
+					<span> [[${totalPrice}]]</span>
+				</div>
+			</div>
 
+		</div>
+		<div th:if="${#lists.isEmpty(basketProducts)}">
+			<h3>BRAK PRODUKTÓW</h3>
+			<span>Kliknij aby dodać</span>
 		</div>
 	</div>
 </body>
