--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="https://www.thymeleaf.com">
+
 <head>
-<meta charset="UTF-8">
-<title>Shopping Cart</title>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-	crossorigin="anonymous">
+	<meta charset="UTF-8">
+	<title>Shopping Cart</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body>
 
 	<div class="container-fluid">
@@ -24,8 +23,8 @@
 							<a class="fas fa-trash icon-dark" th:href="@{/}"></a>
 						</div>
 						<div class="col">
-							<a th:href="@{${product.url}}" th:title="${product.productName}"
-								target="_blank"> <b>[[${product.productName}]]</b>
+							<a th:href="@{${product.url}}" th:title="${product.productName}" target="_blank">
+								<b>[[${product.productName}]]</b>
 							</a>
 						</div>
 						<div
@@ -55,4 +54,5 @@
 		</div>
 	</div>
 </body>
+
 </html>
