--- a/src/main/resources/templates/quantityController.html
+++ b/src/main/resources/templates/quantityController.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="https://www.thymeleaf.com">
+
 <body>
 	<div th:fragment="quantityController(quantityValue, productId)">
 		<nav>
 			<ul class="pagination">
-				<li class="page-item"><a class="page-link minusButton" href=""
-					th:pid="${productId}"><b>-</b></a></li>
-				<li class="page-item"><input type="text"
-					th:value="${quantityValue}" /></li>
-				<li class="page-item"><a class="page-link plusButton" href=""
-					th:pid="${productId}"><b>+</b></a></li>
+				<li class="page-item"><a class="page-link minusButton" href="" th:pid="${productId}"><b>-</b></a></li>
+				<li class="page-item"><input type="text" th:value="${quantityValue}" class="form-control text-center"
+						style="max-width: 55px" th:id="'quantity' + ${productId}" /></li>
+				<li class="page-item"><a class="page-link plusButton" href="" th:pid="${productId}"><b>+</b></a></li>
 			</ul>
 		</nav>
 	</div>
 </body>
+
 </html>
