--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -2,14 +2,27 @@
 <html xmlns:th="https://www.thymeleaf.com">
 
 <head>
-	<meta charset="UTF-8">
-	<title>Shopping Cart</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<meta charset="UTF-8">
+<title>Shopping Cart</title>
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+	crossorigin="anonymous">
 </head>
 
 <body>
-
+	<ul class="nav nav-pills">
+		<th:block th:each="shopModel : ${T(com.bmxApp.enums.Shop).values()}">
+			<li class="nav-item"><a class="nav-link active"
+				aria-current="page" href="#" th:value="${shopModel}"
+				th:text="${shopModel}"></a></li>
+			<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+			<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+			<li class="nav-item"><a class="nav-link disabled" href="#"
+				tabindex="-1" aria-disabled="true">Disabled</a></li>
+		</th:block>
+	</ul>
 	<div class="container-fluid">
 
 		<div>
@@ -23,8 +36,8 @@
 							<a class="fas fa-trash icon-dark" th:href="@{/}"></a>
 						</div>
 						<div class="col">
-							<a th:href="@{${product.url}}" th:title="${product.productName}" target="_blank">
-								<b>[[${product.productName}]]</b>
+							<a th:href="@{${product.url}}" th:title="${product.productName}"
+								target="_blank"> <b>[[${product.productName}]]</b>
 							</a>
 						</div>
 						<div
