--- a/src/main/resources/templates/quantityController.html
+++ b/src/main/resources/templates/quantityController.html
@@ -2,20 +2,31 @@
 <html xmlns:th="https://www.thymeleaf.com">
 
 <body>
-	<div th:fragment="quantityController(quantityValue, productId)">
+	<div
+		th:fragment="quantityController(quantityValue, productId, basketProductId)">
 		<nav>
 			<ul class="pagination">
-				<li class="page-item"><a class="page-link minusButton" href=""
-					th:pid="${productId}"><b>-</b></a></li>
+				<li class="page-item">
+					<form action="#" th:action="@{quantityChangedMinus}"
+						th:object="${basketProductId}" method="post">
+						<input type="hidden" th:attr="name='id'"
+							th:value="${basketProductId.id}" />
+						<button type="submit" value="submit">
+							<b>-</b>
+						</button>
+					</form>
+				</li>
 				<li class="page-item"><input type="text"
 					th:value="${quantityValue}" class="form-control text-center"
 					style="max-width: 55px" th:id="'quantity' + ${productId}" /></li>
-
 				<li class="page-item">
-					<form th:action="@{addProduct}" method="post">
+					<form action="#" th:action="@{quantityChangedPlus}"
+						th:object="${basketProductId}" method="post">
 						<input type="hidden" th:attr="name='id'"
-							th:value="${productId.id}" /> <a class="page-link plusButton"
-							th:href="@{quantityChanged}" th:pid="${productId}"><b>+</b></a>
+							th:value="${basketProductId.id}" />
+						<button type="submit" value="submit">
+							<b>+</b>
+						</button>
 					</form>
 				</li>
 			</ul>
