--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -13,9 +13,11 @@
 
 <body>
 	<ul class="nav nav-pills">
+		<li class="nav-item"><a class="nav-link" aria-current="page"
+			th:href="@{/cart}" th:text="#{allShops}"></a></li>
 		<th:block th:each="shopModel : ${T(com.bmxApp.enums.Shop).values()}">
-			<li class="nav-item"><a class="nav-link"
-				aria-current="page" th:href="@{cart?shop={shop}(shop=${shopModel})}" th:value="${shopModel}"
+			<li class="nav-item"><a class="nav-link" aria-current="page"
+				th:href="@{/cart/{shop}(shop=${shopModel})}" th:value="${shopModel}"
 				th:text="${shopModel}"></a></li>
 		</th:block>
 	</ul>
