--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -17,6 +17,8 @@
 </head>
 <body>
 
+<!-- HEADER -->
+
 	<header class="header">
 
 		<a href="#" class="logo"> <img th:src="@{/logo.png}">
@@ -43,26 +45,22 @@
 
 	</header>
 
+<!-- HEADER -->
 
-	<!--  href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"-->
-	<!--  <div class="container">
+<section class="home" id="mainPage">
 
-		<form th:action="@{/search}" th:object="${kierownice}" method="post">
-			<button type="submit">KIEROWNICE</button>
-		</form>
-	</div>
-	<div id="counter">
-		<img id="background" src="images/plFlag.png" class="img-responsive" />
-	</div>-->
 
-	<div class="container">
+
+
+</section>
+	<!--<div class="container">
 		<img th:src="@{images/bmx.jpg}" class="img-fluid"
 			alt="Responsive Image" width="900" height="750">
 		<button class="btn btn-primary" type="submit" name="category"
 			value="pegs">AAA</button>
 	</div>
 
-	<!--<div class="container">
+	<div class="container">
 		<button type="button" class="btn btn-default">
 		<img src="../static/images/plFlag.png" th:src="@{images/plFlag.png}" />
 		 </button>
@@ -177,5 +175,6 @@
 				</div>
 			</div>
 			<button class="btn btn-primary" type="submit">Submit form</button>-->
+			<script type="text/javascript" th:src="@{/js/mainPageJS.js}"></script>
 </body>
 </html>
