--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -34,14 +34,16 @@
 		</div>
 
 		<div class="cart-items-container">
-			<div class="cart-item" th:each="product : ${products}">
-				<span class="fas fa-times"></span>
+			<div class="cart-item" th:each="basketProduct : ${basketProducts}">
+				<a th:href="@{/removeProduct/{id}(id=${basketProduct.id})}"> <span class="fas fa-times"></span>
+				</a>
 				<div class="content">
-					<h3>[[${product.product.productName}]] |
-						[[${product.shopName}]]</h3>
+					<h3>[[${basketProduct.product.productName}]] |
+						[[${basketProduct.shopName}]]</h3>
 				</div>
 			</div>
-
+			<a class="btn btn-primary" th:href="@{/cart}" role="button"
+				th:text="#{basket}"></a>
 		</div>
 
 	</header>
@@ -64,7 +66,8 @@
 				<div class="child">
 					<div th:each="partButton : ${T(com.bmxApp.enums.Part).values()}">
 						<button class="btn btn-primary" type="submit" name="category"
-							th:value="${partButton.name}" th:text="#{${partButton.name().toLowerCase()}}"></button>
+							th:value="${partButton.name}"
+							th:text="#{${partButton.name().toLowerCase()}}"></button>
 					</div>
 				</div>
 			</form>
