--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -8,40 +8,85 @@
 	rel="stylesheet"
 	integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
 	crossorigin="anonymous">
+<link rel="stylesheet" th:href="@{/header.css}">
+<link rel="stylesheet" th:href="@{/products.css}">
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+	integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+	crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-	<table class="table table-bordered">
-		<thead>
-			<tr>
-				<th scope="col" th:text="#{name}" />
-				<th scope="col" th:text="#{price}" />
-				<th scope="col" th:text="#{image}" />
-				<th scope="col" />
-			</tr>
-		</thead>
-		<tbody>
-			<tr th:each="product : ${products}">
-				<td th:text="${product.productName}" />
-				<td th:text="${product.price}" />
-				<td class="w-25"><img th:src="${product.imageUrl}"
-					alt="${product.imageUrl}" class="img-fluid" width=200 height=200/></td>
-				<!-- <td th:text="${product.imageUrl}"/> -->
-				<td><form action="#" th:action="@{addProduct}" method="post"
-						th:object="${product}">
-						<input type="hidden" th:attr="name='id'" th:value="${product.id}" />
-						<input type="hidden" th:attr="name='shopName'"
-							th:value="${product.shopName}" /> 
-							<input type="hidden"
-							th:attr="name='category'" th:value="${product.category}" />
-						<button type="submit" value="submit" th:text="#{addBasket}"></button>
-					</form> <!--<button class="btn btn-primary" type="submit" name="partName"
-						th:text="#{addBasket}" value="pegi"
-						onclick="window.location.href='http://localhost:8080/?localeData=en'" />
-					<a th:href="@{/search(category=${model.shopName})}">
-						
-				</a>--></td>
-			</tr>
-		</tbody>
-	</table>
+	<!-- HEADER -->
+
+	<header class="header">
+
+		<a href="#" class="logo"> <img th:src="@{/logo.png}">
+		</a>
+		<nav class="navbar">
+			<a th:href="@{/cart}" th:text="#{discountLabel}"></a> <a
+				th:href="@{/cart}" th:text="#{profile}"></a> <a th:href="@{/cart}"
+				th:text="#{contact}"></a>
+		</nav>
+		<div class="icons">
+			<div class="fas fa-shopping-cart" id="cart-btn"></div>
+		</div>
+
+		<div class="cart-items-container">
+			<div class="cart-item" th:each="basketProduct : ${basketProducts}">
+				<a th:href="@{/removeProduct/main/{id}(id=${basketProduct.id})}">
+					<span class="fas fa-times"></span>
+				</a>
+				<div class="content">
+					<h3>[[${basketProduct.product.productName}]] |
+						[[${basketProduct.shopName}]]</h3>
+				</div>
+			</div>
+			<a class="btn btn-primary" th:href="@{/cart}" role="button"
+				th:text="#{basket}"></a>
+		</div>
+
+	</header>
+
+	<!-- HEADER -->
+	<div id="info_container_1">
+		<p class="h5 infoText" th:text="#{shopName}"></p>
+		<p class="h5 infoText" id="shopName" th:text="${shopName}"></p>
+	</div>
+	<div id="info_container_2">
+		<p class="h5 infoText" th:text="#{partName}"></p>
+		<p class="h5 infoText" id="shopName" th:text="#{${category}}"></p>
+	</div>
+	<div id="product_container">
+		<table class="table table-bordered">
+			<thead>
+				<tr>
+					<th scope="col" th:text="#{name}" />
+					<th scope="col" th:text="#{price}" />
+					<th scope="col" th:text="#{image}" />
+					<th scope="col" />
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="product : ${products}">
+					<td th:text="${product.productName}" />
+					<td th:text="${product.formatPrice()}" />
+					<td class="w-25"><img th:src="${product.imageUrl}"
+						alt="${product.imageUrl}" class="img-fluid" width=200 height=200 /></td>
+					<td><form action="#" th:action="@{addProduct}" method="post"
+							th:object="${product}">
+							<input type="hidden" th:attr="name='id'" th:value="${product.id}" />
+							<input type="hidden" th:attr="name='shopName'"
+								th:value="${product.shopName}" /> <input type="hidden"
+								th:attr="name='category'" th:value="${product.category}" />
+							<button type="submit" value="submit" th:text="#{addBasket}"></button>
+						</form></td>
+				</tr>
+			</tbody>
+		</table>
+		<button onclick="topFunction()" id="myBtn" th:title="#{topGo}">
+			<i class="fas fa-arrow-up"></i>
+		</button>
+	</div>
+	<script type="text/javascript" th:src="@{/js/scrollFunction.js}"></script>
 </body>
 </html>
