Cleaning up the code

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -66,6 +66,7 @@ section{
 	background: url(../images/bmx3.jpg) no-repeat;
 	background-size: cover;
 	background-position: center;
+	margin-top: 100px;
 }
 
 .parent {
