--- a/src/main/resources/static/header.css
+++ b/src/main/resources/static/header.css
@@ -93,13 +93,16 @@
 	position: absolute;
 	top: -200%;
 	right: -100%;
-	height: calc(30vh - 9.5rem);
-	width: 35rem;
-	background: #fff;
+	height: calc(100vh - 9.5rem);
+	width: 80rem;
+	background: rgb(177, 177, 177);
 	padding: 0 1.5rem;
 }
 
 .header .discount-container.active{
 	right: 40%;
 	top: 110%;
+	background: rgb(177, 177, 177);
 }
+
+
