--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -8,7 +8,7 @@
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
 	rel="stylesheet"
 	integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-	crossorigin="anonymous">
+	crossorigin="anonymous"/>
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
 	integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -16,10 +16,29 @@
 </head>
 
 <body>
-	<ul class="nav nav-pills">
+
+	<!-- HEADER 
+	<header class="header">
+
+		<a href="#" class="logo"> <img th:src="@{/logo.png}">
+		</a>
+		<nav class="navbar">
+			<a th:href="@{/cart}" th:text="#{calculator}"></a> <a
+				th:href="@{/cart}" th:text="#{profile}"></a> <a th:href="@{/cart}"
+				th:text="#{contact}"></a>
+		</nav>
+		<form th:action="@{/(lang=en)}">
+			<input type="image" th:src="@{/images/pl.png}" width="30" height="20"
+				alt="Submit"> <input type="image" th:src="@{/images/gb.png}"
+				width="30" height="20" alt="Submit">
+		</form>
+	</header>
+	<!-- HEADER -->
+
+	<ul class="nav nav-tabs">
 		<li class="nav-item"><a class="nav-link" aria-current="page"
 			th:href="@{/cart}" th:text="#{allShops}"></a></li>
-		<th:block th:each="shopModel : ${T(com.bmxApp.enums.Shop).values()}">
+		<th:block th:each="shopModel : ${T(com.bmxApp.enums.Shop).getShops()}">
 			<li class="nav-item"><a class="nav-link" aria-current="page"
 				th:href="@{/cart/{shop}(shop=${shopModel})}" th:value="${shopModel}"
 				th:text="${shopModel}"></a></li>
@@ -51,7 +70,7 @@
 									th:replace="quantityController :: quantityController(${basketProduct.quantity}, ${basketProduct.product}, ${basketProduct})"></div>
 							</div>
 						</div>
-						<div class="col">Cena jednostkowa: [[${product.price}]]</div>
+						<div class="col">Cena jednostkowa: [[${product.formatPrice()}]]</div>
 						<div class="col">Cena laczna:
 							[[${totalPriceByProduct.get(basketProduct.id)}]]</div>
 						<div class="col">
