--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -89,7 +89,7 @@
 								<div class="noProduct">
 									<div th:if="${#lists.isEmpty(basketProducts)}">
 										<h3>[[#{noProducts}]]</h3>
-										<span>Kliknij aby dodać</span>
+										<span>[[#{summaryAddButton}]]</span>
 									</div>
 								</div>
 							</div>
