--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -26,7 +26,7 @@
 		<a href="#" class="logo"> <img th:src="@{/logo.png}">
 		</a>
 		<nav class="navbar">
-			<a th:href="@{/cart}" th:text="#{calculator}"></a> <a
+			<a href="https://bmxspokecalc.com/" th:text="#{calculator}"></a> <a
 				th:href="@{/cart}" th:text="#{profile}"></a> <a th:href="@{/cart}"
 				th:text="#{contact}"></a>
 		</nav>
