--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -47,11 +47,11 @@
 		</div>
 
 		<div class="discount-container">
-			<form role="form" th:object="${discountValue}"
+			<form role="form" th:object="${discount}"
 				th:action="@{/applyDiscount}" method="get">
 				<label for="customRange1" class="form-label">[[#{discountLabel}]]</label>
 				<input class="form-control-lg" type="number" min="0" max="100"
-					step="1" th:placeholder="#{discountText}" th:field="*{discountValue}" />
+					step="1" th:placeholder="#{discountText}" th:field="*{value}" />
 				<button type="submit">ENTER</button>
 			</form>
 		</div>
