Create BasketProductBuilder class

--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -82,7 +82,7 @@
 			<tbody>
 				<tr th:each="product : ${products}">
 					<td th:text="${product.productName}" />
-					<td th:text="${product.formatPrice()}" />
+					<td th:text="${ProductFormatter.formatProductPrice(product.price)}" />
 					<td class="w-25"><img th:src="${product.imageUrl}"
 						alt="${product.imageUrl}" class="img-fluid" width=200 height=200 /></td>
 					<td><form action="#" th:action="@{addProduct}" method="post"
